@@ -1635,7 +1635,7 @@ abstract class CItemGeneral extends CApiService {
 		$master_itemids = [];
 
 		foreach ($items as $item) {
-			if ($item['type'] == ITEM_TYPE_DEPENDENT) {
+			if ($item['type'] == ITEM_TYPE_DEPENDENT && array_key_exists('master_itemid', $item)) {
 				$master_itemids[$item['master_itemid']] = true;
 			}
 		}
@@ -1650,7 +1650,7 @@ abstract class CItemGeneral extends CApiService {
 			$host_master_items = [];
 
 			foreach ($items as $item) {
-				if ($item['type'] != ITEM_TYPE_DEPENDENT) {
+				if ($item['type'] != ITEM_TYPE_DEPENDENT || !array_key_exists('master_itemid', $item)) {
 					continue;
 				}
 				$master_item = $master_items[$item['master_itemid']];
@@ -1658,7 +1658,7 @@ abstract class CItemGeneral extends CApiService {
 				if (!array_key_exists($item['hostid'], $host_master_items)) {
 					$host_master_items[$item['hostid']] = [];
 				}
-				if ($master_item['hostid'] != $item['hostid']) {
+				if (bccomp($master_item['hostid'], $item['hostid']) != 0) {
 					if (!array_key_exists($master_item['key_'], $host_master_items[$item['hostid']])) {
 						$inherited_master_items = DB::select('items', [
 							'output' => ['itemid'],
